# linkedin-automation

./: .dockerignore  .env.example  .gitignore  CHROME_SOLUTION.md  DEPLOYMENT_SUMMARY.md  Dockerfile  LINKEDIN_OAUTH_GUIDE.md  MCP_USAGE.md  OAUTH_INTEGRATION_SUMMARY.md  README.md  SOLUTION_SUMMARY.md  TRUEFOUNDRY_DEPLOYMENT.md  credentials.json  docker-compose.yml  example_usage.py  fastmcp_server.py  main.py  pyproject.toml  requirements.txt  run_server.py  setup.env  start.sh  test_fastmcp_endpoints.py  test_mcp.py  test_setup.py
linkedin_job_mcp/: __init__.py  api.py  config.py  linkedin_oauth.py  linkedin_scraper.py  linkedin_scraper_fallback.py  server.py  sheets_client.py  utils.py
static/: index.html
